# wx-cli-mcp

./: Cargo.toml  README.md  SKILL.md  install.ps1  install.sh
.github/workflows/: release.yml
npm/wx-mcp/: install.js  package.json
src/: ipc_client.rs  ipc_types.rs  main.rs  server.rs
