[package]
name = "wx-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server bridging AI agents to wx-daemon via local IPC"

[[bin]]
name = "wx-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
interprocess = { version = "2", features = ["tokio"] }
